@@ -1,3 +1,5 @@
+* BUG#6646 Use decimal number of years instead of integer for apr calculation
+
 Version 1.12 - 2017-04-28
 
 Version 1.10 - 2016-11-02
